--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -27,9 +27,9 @@
       <div class="col-xs-12 col-sm-4 text-xs-center" style="color:black;">
 <div style="text-align: left;">
 <div style="position:relative;left:20px;top:140px;"><h2><b>#forher</b></h2></div>
-<div style="position:relative;left:20px;top:142px;letter-spacing: 0.3em;"><h4>HOT TRENDS 2019</h4></div>
+<div style="position:relative;left:20px;top:142px;letter-spacing: 0.3em;"><h5>HOT TRENDS 2019</h5></div>
 <div style="position:relative;left:20px;top:160px;letter-spacing: 0.3em;border: 1px solid black;
-width:120px;height;30px;vertical-align:middle;text-align:center;"><h5>SHOP NOW</h5></div>
+width:120px;height;30px;vertical-align:middle;text-align:center;"><h5><a href="https://www.mb-mueller.com/damen/bekleidung-grosshandel-lizenz">SHOP NOW</a></h5></div>
 
 
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat2.jpg" width="100%" style="padding-top:20px;padding-bottom:60px;" >
@@ -38,9 +38,9 @@ width:120px;height;30px;vertical-align:middle;text-align:center;"><h5>SHOP NOW</
              <div class="col-xs-12 col-sm-4 text-xs-center" style="color:black;">
 <div style="text-align: left;">
 <div style="position:relative;left:20px;top:140px;"><h2><b>#accessories</b></h2></div>
-<div style="position:relative;left:20px;top:142px;letter-spacing: 0.3em;"><h4>NEW LOOK</h4></div>
+<div style="position:relative;left:20px;top:142px;letter-spacing: 0.3em;"><h5>NEW LOOK</h5></div>
 <div style="position:relative;left:20px;top:160px;letter-spacing: 0.3em;border: 1px solid black;
-width:120px;height;30px;vertical-align:middle;text-align:center;"><h5>SHOP NOW</h5></div>
+width:120px;height;30px;vertical-align:middle;text-align:center;"><h5><a href="https://www.mb-mueller.com/accessoires">SHOP NOW</a></h5></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat1.jpg" width="100%" style="padding-top:20px;padding-bottom:60px;">
 
 </div>
@@ -50,9 +50,9 @@ width:120px;height;30px;vertical-align:middle;text-align:center;"><h5>SHOP NOW</
 <div class="col-xs-12 col-sm-4 text-xs-center" style="color:black;">
 <div style="text-align: left;">
 <div style="position:relative;left:20px;top:140px;"><h2><b>#realmen</b></h2></div>
-<div style="position:relative;left:20px;top:142px;letter-spacing: 0.3em;"><h4>BEST STYLE 2019</h4></div>
+<div style="position:relative;left:20px;top:142px;letter-spacing: 0.3em;"><h5>BEST STYLE 2019</h5></div>
 <div style="position:relative;left:20px;top:160px;letter-spacing: 0.3em;border: 1px solid black;
-width:120px;height;30px;vertical-align:middle;text-align:center;"><h5>SHOP NOW</h5></div>
+width:120px;height;30px;vertical-align:middle;text-align:center;"><h5><a href="https://www.mb-mueller.com/herren/bekleidung">SHOP NOW</a></h5></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat3.jpg" width="100%" style="padding-top:20px;padding-bottom:60px;">
 
 </div>
@@ -68,13 +68,13 @@ width:120px;height;30px;vertical-align:middle;text-align:center;"><h5>SHOP NOW</
 
       <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: center;"> <a href="https://www.mb-mueller.com/damen/accessoires/taschen-gepaeck-grosshandel/steampunk-tasche-banned_9073_11419">
-<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/9073/middle/16284.jpg" width="100%" style="padding-top:30px;" ></a>
+<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/9073/middle/16284.jpg" width="100%" style="padding-top:30px;border: 1px solid grey;" ></a>
 </div>
                     </div>
              <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: center;">
 <a href="https://www.mb-mueller.com/damen/accessoires/taschen-gepaeck-grosshandel/steampunk-tasche-banned_9073_11419">
-<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/7811/middle/12904.jpg" width="100%" style="padding-top:30px;"></a>
+<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/7811/middle/12904.jpg" width="100%" style="padding-top:30px;border: 1px solid grey;"></a>
 </div>
                     </div>
                     
@@ -82,7 +82,7 @@ width:120px;height;30px;vertical-align:middle;text-align:center;"><h5>SHOP NOW</
 <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: center;">
 <a href="https://www.mb-mueller.com/damen/accessoires/taschen-gepaeck-grosshandel/gestreifte-daybag_7813_10159">
-<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/7813/middle/12534.jpg" width="100%" style="padding-top:30px;"></a>
+<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/7813/middle/12534.jpg" width="100%" style="padding-top:30px;border: 1px solid grey;"></a>
 </div>
                     </div>
 
