--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -10,13 +10,13 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="http://www.beatinternet.de/mueller/content/startpage/banner.jpg" alt="First slide">
+      <img class="d-block w-100" src="http://www.beatinternet.de/mueller/content/startpage/banner.jpg" alt="1 slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="http://www.beatinternet.de/mueller/content/startpage/banner2.jpg" alt="Second slide">
+      <img class="d-block w-100" src="http://www.beatinternet.de/mueller/content/startpage/banner2.jpg" alt="2 slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="http://www.beatinternet.de/mueller/content/startpage/banner3.jpg" alt="Third slide">
+      <img class="d-block w-100" src="http://www.beatinternet.de/mueller/content/startpage/banner3.jpg" alt="3 slide">
     </div>
   </div>
 </div>
