--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -27,8 +27,8 @@
       <div class="col-xs-12 col-sm-4 text-xs-center" style="color:black;">
 <div style="text-align: left;">
 <div style="position:relative;left:20px;top:140px;"><h2><b>#forher</b></h2></div>
-<div style="position:relative;left:20px;top:142px;letter-spacing: 0.3em;"><h5>HOT TRENDS 2019</h5></div>
-<div style="position:relative;left:20px;top:160px;letter-spacing: 0.3em;border: 1px solid black;
+<div style="position:relative;left:20px;top:142px;letter-spacing: 0.3em;"><h6>HOT TRENDS 2019</h6></div>
+<div style="position:relative;left:20px;top:160px;letter-spacing: 0.3em;border-bottom: 1px solid black;
 width:120px;height;30px;vertical-align:middle;text-align:center;"><h5><a href="https://www.mb-mueller.com/damen/bekleidung-grosshandel-lizenz">SHOP NOW</a></h5></div>
 
 
@@ -38,8 +38,8 @@ width:120px;height;30px;vertical-align:middle;text-align:center;"><h5><a href="h
              <div class="col-xs-12 col-sm-4 text-xs-center" style="color:black;">
 <div style="text-align: left;">
 <div style="position:relative;left:20px;top:140px;"><h2><b>#accessories</b></h2></div>
-<div style="position:relative;left:20px;top:142px;letter-spacing: 0.3em;"><h5>NEW LOOK</h5></div>
-<div style="position:relative;left:20px;top:160px;letter-spacing: 0.3em;border: 1px solid black;
+<div style="position:relative;left:20px;top:142px;letter-spacing: 0.3em;"><h6>NEW LOOK</h6></div>
+<div style="position:relative;left:20px;top:160px;letter-spacing: 0.3em;border-bottom: 1px solid black;
 width:120px;height;30px;vertical-align:middle;text-align:center;"><h5><a href="https://www.mb-mueller.com/accessoires">SHOP NOW</a></h5></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat1.jpg" width="100%" style="padding-top:20px;padding-bottom:60px;">
 
@@ -50,8 +50,8 @@ width:120px;height;30px;vertical-align:middle;text-align:center;"><h5><a href="h
 <div class="col-xs-12 col-sm-4 text-xs-center" style="color:black;">
 <div style="text-align: left;">
 <div style="position:relative;left:20px;top:140px;"><h2><b>#realmen</b></h2></div>
-<div style="position:relative;left:20px;top:142px;letter-spacing: 0.3em;"><h5>BEST STYLE 2019</h5></div>
-<div style="position:relative;left:20px;top:160px;letter-spacing: 0.3em;border: 1px solid black;
+<div style="position:relative;left:20px;top:142px;letter-spacing: 0.3em;"><h6>BEST STYLE 2019</h6></div>
+<div style="position:relative;left:20px;top:160px;letter-spacing: 0.3em;border-bottom: 1px solid black;
 width:120px;height;30px;vertical-align:middle;text-align:center;"><h5><a href="https://www.mb-mueller.com/herren/bekleidung">SHOP NOW</a></h5></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat3.jpg" width="100%" style="padding-top:20px;padding-bottom:60px;">
 
