--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -68,13 +68,13 @@ width:120px;height;30px;vertical-align:middle;text-align:center;"><h5><a href="h
 
       <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: center;"> <a href="https://www.mb-mueller.com/damen/accessoires/taschen-gepaeck-grosshandel/steampunk-tasche-banned_9073_11419">
-<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/9073/middle/16284.jpg" width="100%" style="padding-top:30px;border: 1px solid #F2F2F2;" ></a>
+<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/9073/middle/16284.jpg" width="100%" style="padding-top:30px;border: 1px solid #E6E6E6;" ></a>
 </div>
                     </div>
              <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: center;">
 <a href="https://www.mb-mueller.com/damen/accessoires/taschen-gepaeck-grosshandel/steampunk-tasche-banned_9073_11419">
-<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/7811/middle/12904.jpg" width="100%" style="padding-top:30px;border: 1px solid #F2F2F2;"></a>
+<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/7811/middle/12904.jpg" width="100%" style="padding-top:30px;border: 1px solid #E6E6E6;"></a>
 </div>
                     </div>
                     
@@ -82,7 +82,7 @@ width:120px;height;30px;vertical-align:middle;text-align:center;"><h5><a href="h
 <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: center;">
 <a href="https://www.mb-mueller.com/damen/accessoires/taschen-gepaeck-grosshandel/gestreifte-daybag_7813_10159">
-<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/7813/middle/12534.jpg" width="100%" style="padding-top:30px;border: 1px solid #F2F2F2;"></a>
+<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/7813/middle/12534.jpg" width="100%" style="padding-top:30px;border: 1px solid #E6E6E6;"></a>
 </div>
                     </div>
 
