--- a/resources/views/Checkout/Components/PaymentProviderSelect.twig
+++ b/resources/views/Checkout/Components/PaymentProviderSelect.twig
@@ -5,7 +5,7 @@
                 <input
                         type="radio"
                         :id="'paymentMethod' + _uid + paymentProvider.id"
-                        name="MethodOfPaymentID"
+                        :name="'MethodOfPaymentID' + _uid"
                         :value="paymentProvider.id"
                         @change="onPaymentProviderChange(paymentProvider)"
                         :checked="methodOfPaymentId === paymentProvider.id"
