--- a/resources/views/Widgets/WidgetComponents.twig
+++ b/resources/views/Widgets/WidgetComponents.twig
@@ -1,3 +1,4 @@
+{{ component( "Ceres::Checkout.Components.AcceptGtcCheck" ) }}
 {{ component("Ceres::Basket.Components.BasketList") }}
 {{ component("Ceres::Basket.Components.Coupon") }}
 {{ component("Ceres::Checkout.Components.ContactWishInput") }}
