--- a/resources/views/Widgets/WidgetComponents.twig
+++ b/resources/views/Widgets/WidgetComponents.twig
@@ -1,4 +1,5 @@
 {{ component( "Ceres::Checkout.Components.AcceptGtcCheck" ) }}
+{{ component( "Ceres::Checkout.Components.ShippingPrivacyHintCheck" ) }}
 {{ component("Ceres::Basket.Components.BasketList") }}
 {{ component("Ceres::Basket.Components.Coupon") }}
 {{ component("Ceres::Checkout.Components.ContactWishInput") }}
