--- a/resources/scss/ceres/widgets/_widgets.scss
+++ b/resources/scss/ceres/widgets/_widgets.scss
@@ -11,4 +11,5 @@
 @import "Common/text-widget";
 @import "Common/title-bar-widget";
 @import "Grid/grid-widget";
+@import "Grid/sticky-widget";
 @import "Helper/base-widget";
