CHANGE PlaceOrderWidget.json - set default value to success

--- a/resources/views/Widgets/Checkout/PlaceOrderWidget.twig
+++ b/resources/views/Widgets/Checkout/PlaceOrderWidget.twig
@@ -9,7 +9,7 @@
     {{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::Checkout.BeforePlaceOrder"])) }}
 
     <place-order
-        appearance="{{ widget.settings.appearance.mobile | default("primary") }}"
+        appearance="{{ widget.settings.appearance.mobile | default("success") }}"
         {% if buttonSize is not empty %}button-size="{{ buttonSize }}"{% endif %}
         target-continue="{{ Twig.print("homepageURL") }}{{ Twig.if("homepageURL | last != '/'") }}/{{ Twig.endif() }}place-order{{ Twig.if("urls.appendTrailingSlash") }}/{{ Twig.endif() }}"
         @payment-response="checkoutComp.showModal($event)">
