--- a/resources/views/Widgets/Header/NavigationWidget.twig
+++ b/resources/views/Widgets/Header/NavigationWidget.twig
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="brand-wrapper">
                 <a class="navbar-brand float-lg-left" href="{{ Twig.print('urls.home') }}">
-                    <img alt="{{ Twig.print('trans("Ceres::Template.headerCompanyName")') }}" src="{{ companyLogoUrl }}" class="img-fluid" crossorigin="anonymous" />
+                    <img alt="{{ Twig.print('trans("Ceres::Template.headerCompanyName")') }}" src="{{ companyLogoUrl }}" class="img-fluid" />
                 </a>
 
                 <button id="btnMainMenuToggler" v-open-mobile-navigation class="navbar-toggler d-lg-none" type="button">
