ADD SubscribeNewsletterCheck (vue component)

--- a/resources/views/Widgets/WidgetComponents.twig
+++ b/resources/views/Widgets/WidgetComponents.twig
@@ -1,5 +1,6 @@
 {{ component( "Ceres::Checkout.Components.AcceptGtcCheck" ) }}
 {{ component( "Ceres::Checkout.Components.ShippingPrivacyHintCheck" ) }}
+{{ component( "Ceres::Checkout.Components.SubscribeNewsletterCheck" ) }}
 {{ component("Ceres::Basket.Components.BasketList") }}
 {{ component("Ceres::Basket.Components.Coupon") }}
 {{ component("Ceres::Checkout.Components.ContactWishInput") }}
