--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -115,8 +115,8 @@
               
               
 {% else %}
-
-Melden Sie sich bitte bei uns an und Sie werden in den nächsten 24 Stunden für den Webshop freigeschaltet
+<b>Preise nur nach Login.</b> Sollten Sie noch kein Kunden bei uns sein, <br>
+melden Sie sich bitte bei uns an und Sie werden in den nächsten 24 Stunden für den Webshop freigeschaltet.
 
 {% endif %}
                     
