--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -69,7 +69,7 @@
                     {% endif %}
                     
 
-<span class="price h1">
+<span class="price h1" style="color:black;">
                         <span ref="variationTotalPrice" :content="currentVariation.prices.default.price.value">
                             ${ variationTotalPrice | currency(currentVariation.prices.default.currency) }
                         </span>
