--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -20,7 +20,7 @@
                         ${ currentVariation.item.manufacturer.externalName }
                     </div>-->
 
-                    <h1 class="h2 title" style="color:black;" >
+                    <h1 class="h2 title" style="color:black;font-weight:bold;" >
                         <span>
                             ${ currentVariation | itemName }
                         </span>
