--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -109,7 +109,8 @@
                                 :item="$store.state.item.variation.documents[0].data"
                                 :show-quantity="true"
                                 :missing-order-properties="variationMissingProperties"
-                                :is-variation-selected="isVariationSelected"></add-to-basket>
+                                :is-variation-selected="isVariationSelected" 
+style="background-color:white;color:black;border: 1px solid black;"></add-to-basket>
                         <slot name="AfterAddToBasket"></slot>
                     </div>
               
