--- a/resources/views/Basket/Components/AddToBasket.twig
+++ b/resources/views/Basket/Components/AddToBasket.twig
@@ -28,7 +28,9 @@
                                         template="#vue-quantity-input"></quantity-input>
                         </div>
 
-                        <button v-if="!isVariationSelected" class="btn btn-block btn-primary disabled" v-tooltip data-toggle="tooltip" data-placement="top" title="{{ trans("Ceres::Template.singleItemPleaseSelectValidVariation") }}">
+                        <button v-if="!isVariationSelected" class="btn btn-block btn-primary disabled" 
+                        v-tooltip data-toggle="tooltip" data-placement="top" 
+                        title="{{ trans("Ceres::Template.singleItemPleaseSelectValidVariation") }}" style="background-color:white;color:black;border: 1px solid black;">
                             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                             {{ trans("Ceres::Template.singleItemAddToBasket") }}
                         </button>
