--- a/resources/views/Item/Components/ItemImageCarousel.twig
+++ b/resources/views/Item/Components/ItemImageCarousel.twig
@@ -1,13 +1,13 @@
 <script type="x/template" id="vue-item-image-carousel">
     <div itemscope itemtype="http://schema.org/Thing">
-        <div id="single-carousel" class="owl-carousel owl-theme owl-single-item" ref="single" style="border:1px solid grey;">
+        <div id="single-carousel" class="owl-carousel owl-theme owl-single-item" ref="single" style="border:1px solid #E6E6E6;">
             <div v-for="image in singleImages">
                 <a :href="image.url" data-lightbox="single-big-image-gallery">
                     <img class="owl-lazy" :data-src="image.url" :alt="getAltText(image)" :title="getItemName()" itemprop="image">
                 </a>
             </div>
-        </div>
-        <div id="thumb-carousel" class="owl-thumbs owl-carousel owl-theme owl-single-item" ref="thumbs" style="border:1px solid grey;">
+        </div><br><br>
+        <div id="thumb-carousel" class="owl-thumbs owl-carousel owl-theme owl-single-item" ref="thumbs" >
             <img
                 @click="goTo(index)"
                 class="owl-thumb"
