--- a/resources/views/Category/Components/CategoryBreadcrumbs.twig
+++ b/resources/views/Category/Components/CategoryBreadcrumbs.twig
@@ -1,6 +1,6 @@
 <script type="x/template" id="vue-category-breadcrumbs">
     <nav style="display: none;" class="container-max small hidden-sm-down" data-component="breadcrumbs" data-renderer="vue">
-        <ul class="breadcrumb">
+        <ul class="breadcrumb" style="background-color:white;">
             <li class="breadcrumb-item">
                 <a href="{{ homepageURL }}">
                     <i class="fa fa-home" aria-hidden="true"></i>
