--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -22,7 +22,7 @@
         {% if not ceresConfig.item.showCategoryImage %}
             <div class="row m-t-1">
                 <div class="col-xs-12">
-                    <h1 class="h2 category-title">{{ category.details[0].name }}</h1>
+                    <h1 class="h2 category-title" style="color:black;">{{ category.details[0].name }}</h1>
                     {% if ceresConfig.item.showCategoryDescription %}
                         <div id="category-description-container" class="category-description m-b-1">{{ category.details[0].description | raw }}</div>
                     {% endif %}
@@ -32,8 +32,8 @@
 
         <div class="list-controls m-b-3">
             <div class="list-controls-inner">
-                <div class="row">
-                    <div class="col-xs-12">
+                <div class="row" style="background-color:white;">
+                    <div class="col-xs-12" style="background-color:white;">
                         <div class="list-wrapper">
                             <item-list-sorting template="#vue-item-list-sorting" :sorting-list="{{ searchOptions.sorting | json_encode }}" :default-sorting="{{ searchOptions.defaultSorting | json_encode }}"></item-list-sorting>
                             <items-per-page
