style="background-color:white;"

--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -30,8 +30,8 @@
             </div>
         {% endif %}
 
-        <div class="list-controls m-b-3">
-            <div class="list-controls-inner">
+        <div class="list-controls m-b-3" style="background-color:white;">
+            <div class="list-controls-inner" style="background-color:white;">
                 <div class="row" style="background-color:white;">
                     <div class="col-xs-12" style="background-color:white;">
                         <div class="list-wrapper">
