--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -22,7 +22,7 @@
         {% if not ceresConfig.item.showCategoryImage %}
             <div class="row m-t-1">
                 <div class="col-xs-12">
-                    <h1 class="h2 category-title" style="color:black;">{{ category.details[0].name }}</h1>
+                    <h1 class="h2 category-title" style="color:black;font-weight:bold;">{{ category.details[0].name }}</h1>
                     {% if ceresConfig.item.showCategoryDescription %}
                         <div id="category-description-container" class="category-description m-b-1">{{ category.details[0].description | raw }}</div>
                     {% endif %}
