--- a/resources/views/Category/Item/CategoryItem.twig
+++ b/resources/views/Category/Item/CategoryItem.twig
@@ -30,7 +30,7 @@
             </div>
         {% endif %}
 
-        <div class="list-controls m-b-3" style="background-color:white;">
+        <div class="list-controls m-b-3" style="background-color:white; border:1px solid #e6e6e6">
             <div class="list-controls-inner" style="background-color:white;">
                 <div class="row" style="background-color:white;">
                     <div class="col-xs-12" style="background-color:white;">
