--- a/resources/views/Checkout/Components/AcceptGtcCheck.twig
+++ b/resources/views/Checkout/Components/AcceptGtcCheck.twig
@@ -1,5 +1,5 @@
 <script type="x/template" id="vue-accept-gtc-check">
-    <div class="form-check" v-bind:class="{ 'error': showError }">
+    <div class="form-check" v-bind:class="{ 'error': showError && !hideCheckbox }">
         <input v-if="!hideCheckbox" class="form-check-input" type="checkbox" value="" :id="'gtc-accept' + _uid" v-model="isChecked">
 
         <label v-if="!customText.length" class="form-check-label" :for="'gtc-accept' + _uid">
