--- a/resources/scss/ceres/views/Templates/Hero/_component-hero.scss
+++ b/resources/scss/ceres/views/Templates/Hero/_component-hero.scss
@@ -1,5 +1,4 @@
 .cmp-hero{
-	
 
 	.hero-category{
 		position: relative;
@@ -36,8 +35,6 @@
 			}
 		}
 	}
-
-
 
 	.hero-main{
 		margin-bottom: 1rem;
@@ -132,10 +129,6 @@
 		}
 	}
 
-	@include media-breakpoint-up(sm){
-
-	}
-
 	@include media-breakpoint-up(md){
 		.hero-main{
 			.hero-category{
@@ -222,10 +215,12 @@
 			content: "";
 			font-family: FontAwesome;
 			position: absolute;
-			width: 100%;
-			height: 100%;
-			top: 0;
-			left: 0;
+			width: auto;
+			height: auto;
+			top: 50%;
+			left: 50%;
+			bottom: 50%;
+			right: 50%;
 			display: flex;
 			align-items: center;
 			font-size: 2rem;
@@ -261,6 +256,20 @@
 		&:after {
 			opacity: 1;
 			visibility: visible;
+		}
+	}
+}
+
+/* IE Compatibility */
+html.ie {
+	.component-loading {
+		&.with-icon {
+			&:after {
+				top: 0;
+				left: 0;
+				right: 0;
+				bottom: 0;
+			}
 		}
 	}
 }
